fix scrollbar light theme

--- a/css/style.css
+++ b/css/style.css
@@ -2152,7 +2152,7 @@ h3 { font-size: 1.25rem; }
 }
 
 ::-webkit-scrollbar-thumb:hover {
-    background: rgba(255, 255, 255, 0.15);
+    background: rgba(0, 0, 0, 0.2);
 }
 
 /* ---------- Selection ---------- */
